<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:title="@string/termux_debugging_preferences_title"
        app:summary="@string/termux_debugging_preferences_summary"
        app:fragment="com.invapp.app.fragments.settings.termux.DebuggingPreferencesFragment"/>

    <Preference
        app:title="@string/termux_terminal_io_preferences_title"
        app:summary="@string/termux_terminal_io_preferences_summary"
        app:fragment="com.invapp.app.fragments.settings.termux.TerminalIOPreferencesFragment"/>

    <Preference
        app:title="@string/termux_terminal_view_preferences_title"
        app:summary="@string/termux_terminal_view_preferences_summary"
        app:fragment="com.invapp.app.fragments.settings.termux.TerminalViewPreferencesFragment"/>

    <Preference
        app:key="widget_scripts"
        app:title="@string/title_widget_scripts"
        app:summary="@string/summary_widget_scripts"
        app:persistent="false"/>

    <Preference
        app:key="preferred_ports"
        app:title="@string/title_preferred_ports"
        app:summary="@string/summary_preferred_ports"
        app:persistent="false"/>

    <Preference
        app:key="integrated_tools"
        app:title="@string/title_integrated_tools"
        app:summary="@string/summary_integrated_tools"
        app:persistent="false"
        app:fragment="com.invapp.app.fragments.settings.IntegratedToolsPreferencesFragment"/>

    <ListPreference
        app:key="launch_page"
        app:title="@string/title_launch_page"
        app:summary="@string/summary_launch_page"
        app:persistent="false"/>

    <SwitchPreferenceCompat
        app:key="auto_start_console"
        app:title="@string/title_auto_start_console"
        app:summary="@string/summary_auto_start_console"
        app:persistent="false"/>

</PreferenceScreen>
