<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp">

        <EditText
            android:id="@+id/preview_port_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_localhost_port"
            android:inputType="number"
            android:maxLength="5"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/preview_go_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_preview_go" />

        <Button
            android:id="@+id/preview_reload_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_preview_reload" />
    </LinearLayout>

    <WebView
        android:id="@+id/preview_webview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>
