<com.invapp.app.terminal.TermuxActivityRootView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_termux_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/activity_termux_root_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="3dp"
        android:layout_marginVertical="0dp"
        android:orientation="vertical">

        <androidx.drawerlayout.widget.DrawerLayout
            android:id="@+id/drawer_layout"
            android:layout_width="match_parent"
            android:layout_alignParentTop="true"
            android:layout_above="@+id/terminal_toolbar_view_pager"
            android:layout_height="match_parent">

            <com.invapp.view.TerminalView
                android:id="@+id/terminal_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:defaultFocusHighlightEnabled="false"
                android:focusableInTouchMode="true"
                android:scrollbarThumbVertical="@drawable/terminal_scroll_shape"
                android:scrollbars="vertical"
                tools:ignore="UnusedAttribute" />

            <LinearLayout
                android:id="@+id/left_drawer"
                android:layout_width="240dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:choiceMode="singleChoice"
                android:divider="@android:color/transparent"
                android:dividerHeight="0dp"
                android:descendantFocusability="blocksDescendants"
                android:orientation="vertical"
                android:background="?attr/termuxActivityDrawerBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageButton
                        android:id="@+id/settings_button"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_settings"
                        android:background="@null"
                        android:contentDescription="@string/action_open_settings"
                        app:tint="?attr/termuxActivityDrawerImageTint" />
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/preview_button"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:text="@string/action_open_preview" />
                </LinearLayout>

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp">
                    <LinearLayout
                        android:id="@+id/workflow_bar_row"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="4dp"
                        android:paddingRight="4dp">
                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/workflow_git_pull_button"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:minWidth="72dp"
                            android:layout_marginEnd="6dp"
                            android:text="@string/action_workflow_git_pull"
                            android:textAllCaps="false" />
                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/workflow_bun_install_button"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:minWidth="72dp"
                            android:layout_marginEnd="6dp"
                            android:text="@string/action_workflow_bun_install"
                            android:textAllCaps="false" />
                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/workflow_bun_dev_button"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:minWidth="72dp"
                            android:layout_marginEnd="6dp"
                            android:text="@string/action_workflow_bun_dev"
                            android:textAllCaps="false" />
                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/workflow_repos_button"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:minWidth="72dp"
                            android:layout_marginEnd="6dp"
                            android:text="@string/action_workflow_repos"
                            android:textAllCaps="false" />
                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/workflow_run_button"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:minWidth="72dp"
                            android:layout_marginEnd="6dp"
                            android:text="@string/action_workflow_run"
                            android:textAllCaps="false" />
                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/workflow_clone_button"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:minWidth="72dp"
                            android:layout_marginEnd="6dp"
                            android:text="@string/action_workflow_clone"
                            android:textAllCaps="false" />
                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/workflow_new_button"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:minWidth="72dp"
                            android:layout_marginEnd="6dp"
                            android:text="@string/action_workflow_new"
                            android:textAllCaps="false" />
                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/workflow_ai_button"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:minWidth="72dp"
                            android:layout_marginEnd="6dp"
                            android:text="@string/action_workflow_ai"
                            android:textAllCaps="false" />
                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/workflow_ai_stop_button"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:minWidth="72dp"
                            android:layout_marginEnd="6dp"
                            android:text="@string/action_workflow_ai_stop"
                            android:textAllCaps="false" />
                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/workflow_more_button"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:minWidth="56dp"
                            android:text="@string/action_workflow_more"
                            android:textAllCaps="false" />
                    </LinearLayout>
                </HorizontalScrollView>

                <ListView
                    android:id="@+id/terminal_sessions_list"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="top"
                    android:layout_weight="1"
                    android:choiceMode="singleChoice"
                    android:longClickable="true" />

                <LinearLayout
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/toggle_keyboard_button"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/action_toggle_soft_keyboard" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/new_session_button"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/action_new_session" />
                </LinearLayout>
            </LinearLayout>

        </androidx.drawerlayout.widget.DrawerLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/terminal_toolbar_view_pager"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="37.5dp"
            android:background="@color/black"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>

    <View
        android:id="@+id/activity_termux_bottom_space_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/transparent" />

</com.invapp.app.terminal.TermuxActivityRootView>
